# ethanluh-dev

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  astro.config.mjs  content-audit.md  copy.ts  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
.claude/: settings.json
.claude/commands/: build.md  test.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  generate-favicon.yml  lint.yml
cpp/: CMakeLists.txt
docs/: architecture.md  design-spec-sheet.html  geometric-combinatorics-related-content.md  hull-peeling-nav.md  redesign-decisions.md  setup.md  zero-forcing-hero.md
docs/archive/: hstar-motif-full-system.md
docs/decisions/: 0001-template.md
public/: resume.tex  robots.txt
scripts/: generate-favicon.ts
src/components/: Cta.astro  DefinitionBlock.astro  DelaunayMotif.astro  DetailsModal.astro  FeaturedProjectCard.astro  Footer.astro  GraphDivider.astro  HStarMotif.astro  HullPeelMotif.astro  IndexRail.astro  Nav.astro  RelatedInfo.astro  ResumeModal.astro  ResumeSheet.astro  SideRail.astro  SpecimenCard.astro  ThemeToggle.astro  ZeroForcingHero.astro
src/content/: coursework.ts  experience.ts  projects.ts  research.ts  resume.ts  site.ts
src/data/: content-points.ts  hstar.ts
src/layouts/: BaseLayout.astro
src/lib/: copy.ts  hstarPath.ts  zeroForcing.ts
src/pages/: coursework.astro  how-it-works.astro  index.astro  stack.astro
src/styles/: global.css
(+2 files in other folders)
