[project]
name = "template-repo"
version = "0.1.0"
description = "Template repository for Python/C++ projects"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
